# wasm-ar

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ar.js  build.sh  findBestMatches.js  gray.py  homography.cpp  index.html  main.cpp  main.js  package-lock.json  package.json  utils.js  wasm_ar.cpp  wasm_ar.js  wasm_ar.wasm  webpack.config.js
.github/workflows/: main.yml
OpenCV_BUILD/: README.md  opencv.js
V1/: CMakeLists.txt  Makefile  findBestMatches.js  gray.py  index.html  main.js  utils.js  wasm_ar.cpp
emscripten/: img_tracker_wasm.cpp  img_tracker_wasm.hpp  utils.cpp  utils.hpp
html/: grayscale.js  imageTracker.js  index.html  index.js  main.js  serve.sh  style.css  wasm_ar.js  wasm_ar.wasm
html/js/: index.js
html/shaders/: flip-image.glsl  grayscale.glsl
js/: grayscale.js  image-tracker-module.js  image-tracker-source.js  image-tracker.js  img-tracker.worker.js  img_tracker_wasm.js  img_tracker_wasm.wasm  index.js  preprocessor.js  wasm-ar-lib.js
js/shaders/: flip-image.glsl  grayscale.glsl  vertex-shader.glsl
js/utils/: gl-utils.js  utils.js
src/: img_tracker_wasm.cpp  img_tracker_wasm.hpp  utils.cpp  utils.hpp  wasm_ar.cpp
wasm/: img_tracker_wasm.js  img_tracker_wasm.wasm
